project/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project-frontend
          image: niklasmtj/devops-project-frontend:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
        - name: project-backend
          image: niklasmtj/devops-project-backend:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
