project/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress-frontend
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: project-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress-backend
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: project-svc
          servicePort: 8080
